@@ -13,6 +13,12 @@ Feature changes
   called. Subclasses need to override this to return the default value
   to use.
 
+Restructuring
+-------------
+
+* Move some util functions that were really grok-specific out of Martian
+  back into Grok.
+
 0.9.2 (2007-11-20)
 ==================
 
